--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "swiper": "^5.4.2"
   },
   "scripts": {
